<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_total">Bill Total: </string>
    <string name="clear">Clear</string>
    <string name="custom">Custom</string>
    <string name="custom_seek">Custom:</string>
    <string name="enter_bill_total">Enter Bill Total</string>
    <string name="four">Four</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="one">One</string>
    <string name="split_by">Split By:</string>
    <string name="three">Three</string>
    <string name="tip">Tip: </string>
    <string name="tip_10">10%</string>
    <string name="tip_15">15%</string>
    <string name="tip_18">18%</string>
    <string name="tip_percent">Tip %: </string>
    <string name="total">Total: </string>
    <string name="two">Two</string>
    <string name="total_person">Total/Person:</string>
    <string name="default_tip_value">$0.00</string>
    <string name="default_percentage_value">40%</string>
    <string name="please_enter_bill">Please Enter Bill Total</string>
</resources>