<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ticketPrice"
        android:text="@string/bill_total"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/generic_margin"/>

    <EditText
        android:id="@+id/editText"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/enter_bill_total"
        android:layout_marginTop="@dimen/generic_small_margin"
        android:layout_marginStart="@dimen/generic_small_margin"
        android:layout_marginEnd="@dimen/generic_margin"
        android:layout_toEndOf="@id/ticketPrice"/>

    <TextView
        android:id="@+id/tip_percent"
        android:text="@string/tip_percent"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticketPrice"
        android:layout_margin="@dimen/generic_margin"/>

    <RadioGroup
        android:id="@+id/radio_group_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_margin="@dimen/generic_small_margin"
        android:orientation="horizontal"
        android:layout_toEndOf="@id/tip">
        <RadioButton
            android:id="@+id/discount5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:checked="true"
            android:text="@string/tip_10"/>
        <RadioButton
            android:id="@+id/discount10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:text="@string/tip_15"/>
        <RadioButton
            android:id="@+id/discount15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:text="@string/tip_18"/>
        <RadioButton
            android:id="@+id/custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:text="@string/custom"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/custom_container"
        android:layout_width="match_parent"
        android:layout_below="@id/radio_group_tip"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_margin="@dimen/generic_small_margin"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/custom_text"
            android:text="@string/custom_seek"
            android:textSize="@dimen/generic_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/generic_small_margin"/>

        <SeekBar
            android:id="@+id/custom_tip_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_small_margin"
            android:layout_weight="9"/>

        <TextView
            android:id="@+id/custom_percentage"
            android:textSize="@dimen/generic_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/generic_small_margin"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tip"
        android:text="@string/tip"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_container"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/generic_margin"/>

    <TextView
        android:id="@+id/tip_price"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_container"
        android:layout_toEndOf="@id/tip"
        android:layout_margin="@dimen/generic_margin"/>

    <TextView
        android:id="@+id/total"
        android:text="@string/total"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tip"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/generic_margin"/>

    <TextView
        android:id="@+id/total_price"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tip_price"
        android:layout_toEndOf="@id/total"
        android:layout_margin="@dimen/generic_margin"/>

    <TextView
        android:id="@+id/split_text"
        android:text="@string/split_by"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total"
        android:layout_margin="@dimen/generic_margin"/>

    <RadioGroup
        android:id="@+id/radio_group_split"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/total"
        android:layout_margin="@dimen/generic_small_margin"
        android:layout_toEndOf="@id/split_text"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:checked="true"
            android:text="@string/one"/>
        <RadioButton
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:text="@string/two"/>
        <RadioButton
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:text="@string/three"/>
        <RadioButton
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/generic_text_size"
            android:text="@string/four"/>
    </RadioGroup>


    <TextView
        android:id="@+id/per_total"
        android:text="@string/total"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_split"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/generic_margin"/>

    <TextView
        android:id="@+id/per_total_price"
        android:textSize="@dimen/generic_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_split"
        android:layout_toEndOf="@id/per_total"
        android:layout_margin="@dimen/generic_margin"/>

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/per_total"
        android:layout_margin="@dimen/generic_small_margin"
        android:enabled="false"
        android:textColor="@color/black"
        android:text="@string/clear"
        android:backgroundTint="@color/gray"/>

</RelativeLayout>